# fcopy

./: .bazelrc  .gitignore  CMakeLists.txt  Readme.md  WORKSPACE
.github/workflows/: build-centos.yml  build-ubuntu.yml
conf/: fcopy.conf
src/: CMakeLists.txt  co_fcopy.cpp  co_fcopy.h  common.cpp  common.h  fcopy_cli.cpp  fcopy_handler.cpp  fcopy_handler.h  fcopy_log.h  fcopy_message.cpp  fcopy_message.h  fcopy_server.cpp  file_manager.cpp  file_manager.h  workspace.bzl
src/client/: BUILD  fcopy_cli.cpp  fcopy_handler.cpp  fcopy_handler.h  file_sender.cpp  file_sender.h
src/common/: BUILD  co_fcopy.cpp  co_fcopy.h  error_code.h  fcopy_log.h  fcopy_message.cpp  fcopy_message.h  localaddr.cpp  message.cpp  message.h  structures.h  utils.cpp  utils.h
src/server/: BUILD  fcopy_server.cpp  file_manager.cpp  file_manager.h  load_config.cpp  service.cpp  service.h
